--- a/projects.html
+++ b/projects.html
@@ -131,7 +131,7 @@
           </div>
           <div class="project-page-info">
             <h4>Blues Tarot</h4>
-            <p>
+            <p class="p_bluesTarot">
               A project built with the purpose of promoting the photographic
               exhibition <i>Blue Tarot</i> of the Italian photographer
               <i>Maria Martinelli</i>. It is a two pages website, first page is
@@ -156,7 +156,7 @@
           </div>
           <div class="project-page-info">
             <h4>road to saint nicholas</h4>
-            <p>
+            <p class="p_roadToSaintNicholas">
               A virtual trip on the
               <i>road to Saint Nicholas</i>. An app made for those tourists who
               are visiting or planning to visit the city of Bari. A virtual bus
@@ -187,7 +187,7 @@
           </div>
           <div class="project-page-info">
             <h4>Tecnocupole Pancaldi</h4>
-            <p>
+            <p class="p_tecnocupolePancaldi">
               Project built from start to end during my work experience in
               Developing.it.
               <i>Tecnocupole Pancaldi</i> website has been built using
@@ -207,7 +207,7 @@
           </div>
           <div class="project-page-info">
             <h4>Studi Dentistici Maffei</h4>
-            <p>
+            <p class="p_studiDentisticiMaffei">
               Project built from start to end during my work experience in
               Developing.it.
               <i>Studi Dentistici Maffei</i> website has been built with
@@ -229,7 +229,7 @@
           </div>
           <div class="project-page-info">
             <h4>Ernest Verner</h4>
-            <p>
+            <p class="p_ernestVerner">
               I'm responsible for maintaining and updating the
               <i>Ernest Verner</i> website. This website has been built with
               <i>Wordpress</i> and as of today I made some maintenance work,
@@ -250,7 +250,7 @@
           </div>
           <div class="project-page-info">
             <h4>Jumbo Clubs</h4>
-            <p>
+            <p class="p_jumboClubs">
               Explore the
               <i>Jumbo Clubs</i> events taking place in some of the top cities
               of the world! A project part of my <i>"Jumbo series"</i> which
@@ -279,7 +279,7 @@
           </div>
           <div class="project-page-info">
             <h4>the coffee blend</h4>
-            <p>
+            <p class="p_theCoffeeBlend">
               A project part of my <i>"Jumbo series"</i> which includes also
               "Jumbo Clubs" and "Jumbo colombian Tea". The
               <i>"Jumbo series"</i> has been conceived for academic purposes
@@ -306,7 +306,7 @@
           </div>
           <div class="project-page-info">
             <h4>comfy slot</h4>
-            <p>
+            <p class="p_comfySlot">
               <i>Comfy Slot</i> is a web app built with the
               <i>React</i> framework which allows you (among several other
               options) to log in, choose among a database of products adding
@@ -336,7 +336,7 @@
           </div>
           <div class="project-page-info">
             <h4>cocktails set</h4>
-            <p>
+            <p class="p_cocktailsSet">
               <i>Cocktails Set</i> is a web app built with the
               <i>React</i> framework which allows you to search for a specific
               cocktail and see it's specifics. The <i>Cocktails Set</i> project
@@ -364,7 +364,7 @@
           </div>
           <div class="project-page-info">
             <h4>jumbo colombian tea</h4>
-            <p>
+            <p class="p_jumboColombiaTea">
               What's your favorite cup of tea? This project is part of my
               <i>"Jumbo series"</i> which includes also "Jumbo Clubs" and "Jumbo
               Coffee Blend". The <i>"Jumbo series"</i> has been conceived for
@@ -391,7 +391,7 @@
           </div>
           <div class="project-page-info">
             <h4>technical document template</h4>
-            <p>
+            <p class="p_technicalDocumentTemplate">
               A full responsive webpage template created for showing technical
               instructions.
             </p>
@@ -415,7 +415,7 @@
           </div>
           <div class="project-page-info">
             <h4>job tracker</h4>
-            <p>
+            <p class="p_jobTracker">
               <i>Job Tracker</i> is a web app built with the
               <i>React</i> framework which allows you (among several other
               options) to keep trace of your scheduled interviews, pending
@@ -442,7 +442,7 @@
           </div>
           <div class="project-page-info">
             <h4>github users</h4>
-            <p>
+            <p class="p_githubUsers">
               <i>Github Users</i> is a web app built with the
               <i>React</i> framework which allows you, after logging in, to
               search for a github user and see some of his statistics (eg.
@@ -471,7 +471,7 @@
           </div>
           <div class="project-page-info">
             <h4>WineMe</h4>
-            <p>
+            <p class="p_winMe">
               A project built with the purpose of creating a
               <i>form</i> template made of all possible types of form inputs.
               Help out improving the <i>WineMe</i> service by filling out the
@@ -499,7 +499,7 @@
           </div>
           <div class="project-page-info">
             <h4>Cocktails Table</h4>
-            <p>
+            <p class="p_cocktailsTable">
               A project built with the purpose of creating a table of cocktails
               and a page illustrating details of ech one of them.
             </p>
