--- a/about.html
+++ b/about.html
@@ -11,6 +11,19 @@
     />
     <meta
       property="og:image"
+      content="https://franekdev-portfolio.netlify.app/images/cv-pic.jpeg"
+    />
+    <meta
+      property="og:url"
+      content="https://franekdev-portfolio.netlify.app/"
+    />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:description"
+      content="A frontend developer portfolio page."
+    />
+    <meta
+      property="og:image"
       content="https://franekdev-portfolio.netlify.app/images/green4.png"
     />
     <meta
@@ -149,7 +162,7 @@
           Here below you can view or download my curriculum
         </p>
         <a
-          href="./Francesco Leccese Curriculum Vitae (Jul).pdf"
+          href="./Francesco Leccese Curriculum Vitae (JUL-ENG).pdf"
           class="page-about-text cv-container"
         >
           <div style="align-content: center">Francesco Leccese CV (ENG)</div>
@@ -159,7 +172,7 @@
           </div>
         </a>
         <a
-          href="./Francesco Leccese Curriculum Vitae (Dec-ITA).pdf"
+          href="./Francesco Leccese Curriculum Vitae (JUL-ITA).pdf"
           class="page-about-text cv-container"
         >
           <div style="align-content: center">Francesco Leccese CV (ITA)</div>
