--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ In have a passion for technology and visual arts, especially photography and des
     </div>
     <section class="section services">
       <div class="section-title">
-        <h2>Services</h2>
+        <h2 class="servicesTitle">Services</h2>
         <div class="underline"></div>
       </div>
         <div class="section-center services-center">
@@ -292,7 +292,7 @@ Deep care of the overall style of your app combined with the focus on the actual
   <source src="./video (1).mp4" type:"video/mp4">
   Video embedded is not supported by your browser
 </video>
-<div class="contact-info-banner">
+<div class="section-center contact-info-banner">
   <div class="contact-info">
     <div class="section-title">
       <h2 class="touchTitle">let's get in touch</h2>
@@ -318,7 +318,7 @@ Deep care of the overall style of your app combined with the focus on the actual
       <div class="section-center timeline-center">
         <article class="single-timeline">
           <h4>2024</h4>
-          <p >Freelance FRONT-END DEVELOPER  <span class="singleTimeline1">at</span> FranekDev <br><span class="singleTimeline01">Build, create and maintain full responsive web app or websites. More information about the technologies used for building each of the websites are available in my </span> <a href="./projects.html" class="page-link">Projects Page<a></a></p>   
+          <p >Freelance FRONT-END DEVELOPER  <span class="singleTimeline1">at</span> FranekDev <br><span class="singleTimeline01">Build, create and maintain full responsive web app or websites. More information about the technologies used for building each of the websites are available in my </span> <a href="./projects.html" class="cc projectPage ">Projects Page<a></a></p>   
           <span class="timeline-number">1</span>
         </article>
         <article class="single-timeline">
