--- a/about.html
+++ b/about.html
@@ -8,11 +8,11 @@
     <meta property="og:title" content="FranekDev Portfolio Website" />
     <meta
       property="og:description"
-      content="A frontend developer portfolio page."
+      content="Francesco Leccese - Curriculum Vitae."
     />
     <meta
       property="og:image"
-      content="https://franekdev-portfolio.netlify.app/images/cv-pic.jpeg"
+      content="https://franekdev-portfolio.netlify.app/images/franekLogo.png"
     />
     <meta
       property="og:url"
