--- a/projects.html
+++ b/projects.html
@@ -118,6 +118,35 @@
       <div class="section-center project-page-center">
         <article class="project-page-single">
           <div class="project-page-img">
+            <img src="./images/piantina.jpg" alt="" class="project-page-pic" />
+            <a href="https://blues-tarot.netlify.app" target="_blank">
+              <span class="page-icon">
+                <i class="fa-solid fa-house-chimney"></i>
+              </span>
+            </a>
+          </div>
+          <div class="project-page-info">
+            <h4>Ti Pianto Per Amore</h4>
+            <p class="p_tiPiantoPerAmore">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+              Molestias, omnis? <i>Piantala</i> Lorem, ipsum.
+              <i>Amici di Ernest Verner</i>. Lorem, ipsum dolor sit amet
+              consectetur adipisicing elit. Iusto, blanditiis..
+            </p>
+            <div class="project-page-footer">
+              <i class="fa-brands fa-android"></i>
+
+              <a href="/downloads/app-debug.apk"> installa android</a>
+            </div>
+            <div class="project-page-footer">
+              <i class="fa-brands fa-github"></i>
+
+              <a href="https://github.com/Franek-86/Maria"> source code</a>
+            </div>
+          </div>
+        </article>
+        <article class="project-page-single">
+          <div class="project-page-img">
             <img
               src="./images/blues tarot-arcani maggiori-WEBSITE-01.jpg"
               alt=""
