--- a/projects.html
+++ b/projects.html
@@ -119,7 +119,7 @@
         <article class="project-page-single">
           <div class="project-page-img">
             <img src="./images/piantina.jpg" alt="" class="project-page-pic" />
-            <a href="https://blues-tarot.netlify.app" target="_blank">
+            <a href="https://piantala-a.onrender.com/" target="_blank">
               <span class="page-icon">
                 <i class="fa-solid fa-house-chimney"></i>
               </span>
@@ -130,19 +130,20 @@
             <p class="p_tiPiantoPerAmore">
               Lorem ipsum dolor, sit amet consectetur adipisicing elit.
               Molestias, omnis? <i>Piantala</i> Lorem, ipsum.
-              <i>Amici di Ernest Verner</i>. Lorem, ipsum dolor sit amet
-              consectetur adipisicing elit. Iusto, blanditiis..
+              <i>Amici di Ernest Verner</i>. Lorem ipsum dolor sit amet,
+              consectetur adipisicing elit. Incidunt dicta a sit ipsum assumenda
+              quibusdam quis quam sunt quidem fugit.
             </p>
             <div class="project-page-footer">
               <i class="fa-brands fa-android"></i>
 
-              <a href="/downloads/app-debug.apk"> installa android</a>
+              <a href="/downloads/app-debug.apk"> Installa Android App</a>
             </div>
-            <div class="project-page-footer">
+            <!-- <div class="project-page-footer">
               <i class="fa-brands fa-github"></i>
 
               <a href="https://github.com/Franek-86/Maria"> source code</a>
-            </div>
+            </div> -->
           </div>
         </article>
         <article class="project-page-single">
