--- a/projects.html
+++ b/projects.html
@@ -245,7 +245,7 @@
             </p>
           </div>
         </article>
-        <article class="project-page-single">
+        <!-- <article class="project-page-single">
           <div class="project-page-img">
             <img src="./images/verner.jpg" alt="" class="project-page-pic" />
             <a
@@ -267,7 +267,7 @@
               currently working on the payment plug-in functionality.
             </p>
           </div>
-        </article>
+        </article> -->
 
         <article class="project-page-single">
           <div class="project-page-img">
