--- a/index.html
+++ b/index.html
@@ -213,21 +213,7 @@ Deep care of the overall style of your app combined with the focus on the actual
         </article>
         </a>
 
-        <a href="https://fmastrorocco.developing.it/" target="_blank" class="area area-2">
-        <article class="single-work">
-          <div class="single-work-img">
-           <img src="./images/tecnocupole.jpg" alt="" class="single-work-pic">
-          </div>
-          <div class="single-work-info">
-             <div class="info-content">
-           <h4>Tecnocupole Pancaldi</h4>
-
-</p>
-           </div>
-          </div>
-        </article>
-
-                 <a href="https://lelesanto.developing.it/" target="_blank" class="area area-3">
+                 <a href="https://www.studidentisticimaffei.it/" target="_blank" class="area area-2">
         <article class="single-work">
           <div class="single-work-img">
            <img src="./images/maffei.jpg" alt="" class="single-work-pic">
@@ -242,7 +228,7 @@ Deep care of the overall style of your app combined with the focus on the actual
         </article>
         </a>
 
-         <a href="https://piantala-a.onrender.com" target="_blank" class="area area-4">
+         <a href="https://piantala-a.onrender.com" target="_blank" class="area area-3">
         <article class="single-work">
           <div class="single-work-img">
            <img src="./images/piantina.jpg" alt="" class="single-work-pic">
@@ -257,7 +243,7 @@ Deep care of the overall style of your app combined with the focus on the actual
         </article>
         </a>
         </a>
-         <a href="https://wine-me.netlify.app/" target="_blank"  class="area area-5">
+         <a href="https://wine-me.netlify.app/" target="_blank"  class="area area-4">
         <article class="single-work">
           <div class="single-work-img">
            <img src="./images/winMe.jpg" alt="" class="single-work-pic">
@@ -271,7 +257,7 @@ Deep care of the overall style of your app combined with the focus on the actual
           </div>
         </article>
         </a>
-        <a href="https://rtsn-v2-a.onrender.com/" target="_blank" class="area area-6">
+        <a href="https://rtsn-v2-a.onrender.com/" target="_blank" class="area area-5">
         <article class="single-work">
           <div class="single-work-img">
            <img src="./images/saint.jpg" alt="" class="single-work-pic">
