--- a/projects.html
+++ b/projects.html
@@ -202,7 +202,7 @@
             </div>
           </div>
         </article>
-        <article class="project-page-single">
+        <!-- <article class="project-page-single">
           <div class="project-page-img">
             <img
               src="./images/tecnocupole.jpg"
@@ -225,7 +225,7 @@
               advanced <i>Wordpress</i> features.
             </p>
           </div>
-        </article>
+        </article> -->
         <article class="project-page-single">
           <div class="project-page-img">
             <img src="./images/maffei.jpg" alt="" class="project-page-pic" />
