--- a/projects.html
+++ b/projects.html
@@ -130,9 +130,8 @@
             <p class="p_tiPiantoPerAmore">
               Lorem ipsum dolor, sit amet consectetur adipisicing elit.
               Molestias, omnis? <i>Piantala</i> Lorem, ipsum.
-              <i>Amici di Ernest Verner</i>. Lorem ipsum dolor sit amet,
-              consectetur adipisicing elit. Incidunt dicta a sit ipsum assumenda
-              quibusdam quis quam sunt quidem fugit.
+              <i>Amici di Ernest Verner</i>. Lorem ipsum dolor sit amet
+              consectetur adipisicing elit. Sed, mollitia.
             </p>
             <div class="project-page-footer">
               <i class="fa-brands fa-android"></i>
